Re-added camera button on small size, fixed up camera-button style

--- a/client/stylesheets/partials/_camera-button.scss
+++ b/client/stylesheets/partials/_camera-button.scss
@@ -1,15 +1,19 @@
 #camera-button {
+
+    @media (min-width: $medium-device) {
+        display: none;
+    }
+
 	button {
-        font-size: 50%;
-		background: #ABA8AB;
+        position: fixed;
+        bottom: 10%;
+        right: 10%;
+        font-size: 160%;
+		background: #0077DD;
+        color: white;
     	border-radius: 50%;
     	border: none;
     	box-shadow: 0px 2px 10px rgba(0,0,0,.3),0px 0px 1px rgba(0,0,0,.1),inset 0px 1px 0px rgba(255,255,255,.25),inset 0px -1px 0px rgba(0,0,0,.15);
-        padding: 11px;
-        transition: all .3s ease;
-        &:hover {
-            background: #2D2D2D;
-            color: white;
-        }
+        padding: 12px;
     }
 }
